--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/Style/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/style/style.css" media="screen" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.es.gov.br/fonts/font-awesome/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700&display=swap" rel="stylesheet">
     <title>Clinica Santa Cruz</title>
 </head>
 
@@ -68,7 +70,6 @@
                 <li><a href="#">Clínica geral</a></li>
                 <li><a href="#">Pediatria</a></li>
                 <li><a href="#">Ventosoterapia com liberação</a></li>
-                <li><a href="#">Ginecologia e Obstetrícia clínica</a></li>
             </ol>
             <ol>
                 <li><a href="#">Massagem modeladora</a></li>
@@ -82,31 +83,221 @@
                 <li><a href="#">Psicologia infantil</a></li>
                 <li><a href="#">Psicologia adulto</a></li>
             </ol>
-            <ol>
+            <!-- <ol>
+                
+                <li><a href="#">Ginecologia e Obstetrícia clínica</a></li>
                 <li><a href="#">ECG</a></li>
                 <li><a href="#">Mapa</a></li>
                 <li><a href="#">Drenagem linfática</a></li>
                 <li><a href="#">Nutrição</a></li>
-            </ol>
+            </ol> -->
         </div>
+        <div id="btnPad"><span class="noselect">Saiba mais</span><div id="circle"></div></div>
     </section>
 
-    <section id="infoContact">
-        <h2><i class="fas fa-id-badge"></i> Informações de contato</h2>
-    </section>
+    <!-- <section id="infoContact">
+        <h2><i class="fas fa-info-circle"></i> Informações de contato</h2>
+
+        <div class="contactLogoPhone">
+            <ul>
+                <div>
+                    <li class="inconPhone"><a href="#"><i class="fa fa-phone"></i></a></li>
+                </div>
+                <div class="customerServicePhone">
+                    <li><b>Atendimento ao cliente:</b></li>
+                    <li class="phone">(79) 99656-1329</li>
+                </div>
+            </ul>
+        </div>
+
+        <div class="emailAd">
+                <ul>
+                    <div>
+                        <li class="inconPhone"><a href="#"><i class="fa fa-envelope"></i></a></li>
+                    </div>
+                    <div class="customerEmailAd">
+                        <li><b>Atendimento ao cliente:</b></li>
+                        <li class="phone">(79) 99656-1329</li>
+                    </div>
+                </ul>
+            </div>
+    </section> -->
 
     <section id="aboutHome">
-        <h2><i class="fas fa-info-circle"></i> Quem somos</h2>
-        <div>
+        <h2> Quem somos</h2>
+        <img src="/img/icone-pulso.png" width="100">
+        <p>
+            A Clínica Santa Cruz foi a primeira do estado de Goiás a se adequar de acordo com as normas da Vigilância
+            Sanitaria e consequentemente à ter o Alvará de funcionamento. Esta localizada em Goiânia e foi idealizada…
+        </p>
+        <div id="btnPad"><span class="noselect">Saiba mais</span><div id="circle"></div></div>
+    </section>
 
-        </div>
+    <section id="ourStructure">
+        <h2><i class="fas fa-info-circle"></i> Nossa Estrutura</h2>
+        <div class="galeryStruct">
+
+              <div class="pic-container">
+                <div class="parent">
+                  <div class="wrapper thumb-1">
+                    <div class="content">
+                      <div class="img"></div>
+                      <div class="text">
+                        <div class="line title"></div>
+                        <div class="line subtitle"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="pic-container">
+                <div class="parent">
+                  <div class="wrapper thumb-2">
+                    <div class="content">
+                      <div class="img"></div>
+                      <div class="text">
+                        <div class="line title"></div>
+                        <div class="line subtitle"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="pic-container">
+                <div class="parent">
+                  <div class="wrapper thumb-3">
+                    <div class="content">
+                      <div class="img"></div>
+                      <div class="text">
+                        <div class="line title"></div>
+                        <div class="line subtitle"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="pic-container">
+                <div class="parent">
+                  <div class="wrapper thumb-4">
+                    <div class="content">
+                      <div class="img"></div>
+                      <div class="text">
+                        <div class="line title"></div>
+                        <div class="line subtitle"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <div id="btnPad"><span class="noselect">Saiba mais</span><div id="circle"></div></div>
     </section>
 
 
-    <footer>
-        areas do site
+    <footer class="footer-10">
+        <div class="container">
+            <div class="row mb-5 pb-3 no-gutters">
+                <div class="col-md-4 mb-md-0 mb-4 d-flex">
+                    <div class="con con-1 w-100 py-5">
+                        <div class="con-info w-100 text-center">
+                            <div class="icon d-flex align-items-center justify-content-center">
+                                <span><i class="fa fa-phone"></i></span>
+                            </div>
+                            <div class="text">
+                                <span>(79) 99656-1329</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-md-0 mb-4 d-flex">
+                    <div class="con con-2 w-100 py-5">
+                        <div class="con-info w-100 text-center">
+                            <div class="icon d-flex align-items-center justify-content-center">
+                                <span><i class="fa fa-envelope"></i></span>
+                            </div>
+                            <div class="text">
+                                <span>santacruzclinica@gmail.com</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-md-0 mb-4 d-flex">
+                    <div class="con con-3 w-100 py-5">
+                        <div class="con-info w-100 text-center">
+                            <div class="icon d-flex align-items-center justify-content-center">
+                                <span><i class="fa fa-thumb-tack"></i></span>
+                            </div>
+                            <div class="text">
+                                <span>Av. Santa Cruz, 1166 - Estância,SE </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 mb-md-0 mb-4">
+                    <h2 class="footer-heading">Receba nossas atualizações</h2>
+                    <form action="#" class="subscribe-form">
+                        <div class="form-group d-flex">
+                            <input type="text" class="form-control rounded-left" placeholder="Endereço de E-mail">
+                            <button type="submit" class="form-control submit rounded-right">Enviar</button>
+                        </div>
+                        <span class="subheading">Receba atualizações de marketing digital em sua caixa de correio</span>
+                    </form>
+                </div>
+                <div class="col-md-7">
+                    <div class="row">
+                        <div class="col-md-4 mb-md-0 mb-4">
+                            <h2 class="footer-heading">Sobre</h2>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="d-block">Nossa História</a></li>
+                                <li><a href="#" class="d-block">Nosso Time</a></li>
+                                <li><a href="#" class="d-block">Career</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-4 mb-md-0 mb-4">
+                            <h2 class="footer-heading">Empresa</h2>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="d-block">Nossos Serviços</a></li>
+                                <li><a href="#" class="d-block">Clientes</a></li>
+                                <li><a href="#" class="d-block">Contato</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-4 mb-md-0 mb-4">
+                            <h2 class="footer-heading">Mais</h2>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="d-block">Blog</a></li>
+                                <li><a href="#" class="d-block">Política de Privacidade</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="row mt-5 pt-4 border-top">
+                <div class="col-md-6 col-lg-8 mb-md-0 mb-4" style=" display: flex; justify-content: center; align-items: center;">
+                    <p class="copyright mb-0">
+                       Clínica Santa Cruz | 2022 @
+                    </p>
+                </div>
+                <div class="col-md-6 col-lg-4 text-md-right" >
+                    <ul class="ftco-footer-social p-0">
+                        <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top"
+                                title="Whatsapp"><span><i class="fa fa-whatsapp"></i></span></a></li>
+                        <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top"
+                                title="Facebook"><span><i class="fa fa-facebook"></i></span></a></li>
+                        <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top"
+                                title="Instagram"><span><i class="fa fa-instagram"></i></span></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
+    <script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
+    <script src="js/main.js"></script>
 </body>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
