--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Especialidades</a></li>
                 <li><a href="#">Quem somos</a></li>
-                <li><a href="#">Galeria</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#">Nossa estrutura</a></li>
+                <!-- <li><a href="#">Contato</a></li> -->
             </ul>
         </div>
 
@@ -134,7 +134,7 @@
     </section>
 
     <section id="ourStructure">
-        <h2><i class="fas fa-info-circle"></i> Nossa Estrutura</h2>
+        <h2> Nossa Estrutura</h2>
         <div class="galeryStruct">
 
               <div class="pic-container">
